--- a/index.html
+++ b/index.html
@@ -41,22 +41,18 @@
   </div>
 </nav>
 
-<!-- ==================== HERO CAROUSEL ==================== -->
+<!-- ==================== HERO CAROUSEL — RANDOM ==================== -->
 <div class="hero-carousel-container">
-  <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="9000">
+  <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
     
-    <!-- Indicators -->
-    <div class="carousel-indicators custom-indicators">
-      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
+    <!-- INDICATORS: EMPTY — SCRIPT WILL FILL THEM -->
+    <div class="carousel-indicators custom-indicators"></div>
 
-    <!-- Slides -->
+    <!-- SLIDES: ADD NEW ONES ANYWHERE — NO ORDER, NO DOTS -->
     <div class="carousel-inner">
 
-      <!-- Slide 1 -->
-      <div class="carousel-item active">
+      <!-- SLIDE 1 -->
+      <div class="carousel-item">
         <picture>
           <source media="(max-width: 767px)" srcset="images/CosiOQ-mobile.jpg">
           <img src="images/CosiOQ.jpg" class="carousel-img" alt="Così fan tutte — Opera Queensland">
@@ -68,7 +64,7 @@
         </div>
       </div>
 
-      <!-- Slide 2 -->
+      <!-- SLIDE 2 -->
       <div class="carousel-item">
         <picture>
           <source media="(max-width: 767px)" srcset="images/FigaroSOSA2-mobile.jpg">
@@ -81,7 +77,7 @@
         </div>
       </div>
 
-      <!-- Slide 3 -->
+      <!-- SLIDE 3 -->
       <div class="carousel-item">
         <picture>
           <source media="(max-width: 767px)" srcset="images/CorcoranSOSA-mobile.jpg">
@@ -94,9 +90,24 @@
         </div>
       </div>
 
+      <!-- ADD NEW SLIDES HERE — ANY ORDER, NO DOTS -->
+      <!-- Example:
+      <div class="carousel-item">
+        <picture>
+          <source media="(max-width: 767px)" srcset="images/NEW-mobile.jpg">
+          <img src="images/NEW.jpg" class="carousel-img" alt="...">
+        </picture>
+        <div class="review-caption">
+          <h3><i>Title</i> — Company, Year</h3>
+          <p>“Quote...”</p>
+          <p class="reviewer">— Name, <em>Pub</em></p>
+        </div>
+      </div>
+      -->
+
     </div>
 
-    <!-- Controls -->
+    <!-- CONTROLS -->
     <button class="carousel-control-prev" type="button" data-bs-target="#reviewCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -107,36 +118,65 @@
     </button>
   </div>
 
-  <!-- MOBILE REVIEW TEXT (auto-synced) -->
+  <!-- MOBILE REVIEW TEXT (AUTO-SYNCED) -->
   <div class="container d-md-none mt-4 px-4">
     <div id="mobileReview" class="text-center phonetext"></div>
   </div>
 </div>
 
-<!-- Bootstrap JS -->
+<!-- BOOTSTRAP JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-<!-- Sync mobile text -->
+<!-- RANDOMIZE + AUTO-DOTS + MOBILE SYNC -->
 <script>
-  const carousel = document.getElementById('reviewCarousel');
-  const mobileReview = document.getElementById('mobileReview');
+  document.addEventListener('DOMContentLoaded', function () {
+    const carousel = document.getElementById('reviewCarousel');
+    const inner = carousel.querySelector('.carousel-inner');
+    const indicators = carousel.querySelector('.carousel-indicators');
+    const items = Array.from(inner.children);
+    const mobileReview = document.getElementById('mobileReview');
 
-  function updateMobileReview() {
-    const active = carousel.querySelector('.carousel-item.active');
-    const title = active.querySelector('h3').innerHTML;
-    const quote = active.querySelector('p:not(.reviewer)').innerHTML;
-    const reviewer = active.querySelector('.reviewer').innerHTML;
-    mobileReview.innerHTML = `
-      <p class="minititle mb-2">${title}</p>
-      <p class="mb-2">${quote}</p>
-      <p class="reviewer text-muted small">${reviewer}</p>
-      <hr class="my-4 opacity-25">
-    `;
-  }
+    // === RANDOMIZE ORDER ===
+    items.sort(() => Math.random() - 0.5);
 
-  carousel.addEventListener('slid.bs.carousel', updateMobileReview);
-  updateMobileReview();
+    // === REBUILD SLIDES ===
+    inner.innerHTML = '';
+    items.forEach((item, index) => {
+      if (index === 0) item.classList.add('active');
+      else item.classList.remove('active');
+      inner.appendChild(item);
+    });
+
+    // === AUTO-GENERATE DOTS ===
+    indicators.innerHTML = '';
+    items.forEach((_, index) => {
+      const btn = document.createElement('button');
+      btn.type = 'button';
+      btn.dataset.bsTarget = '#reviewCarousel';
+      btn.dataset.bsSlideTo = index;
+      btn.setAttribute('aria-label', `Slide ${index + 1}`);
+      if (index === 0) btn.classList.add('active');
+      indicators.appendChild(btn);
+    });
+
+    // === UPDATE MOBILE TEXT ===
+    function updateMobileReview() {
+      const active = carousel.querySelector('.carousel-item.active');
+      const title = active.querySelector('h3').innerHTML;
+      const quote = active.querySelector('p:not(.reviewer)').innerHTML;
+      const reviewer = active.querySelector('.reviewer').innerHTML;
+      mobileReview.innerHTML = `
+        <p class="minititle mb-2">${title}</p>
+        <p class="mb-2">${quote}</p>
+        <p class="reviewer text-muted small">${reviewer}</p>
+        <hr class="my-4 opacity-25">
+      `;
+    }
+
+    updateMobileReview();
+    carousel.addEventListener('slid.bs.carousel', updateMobileReview);
+  });
 </script>
 
 </body>
