--- a/contact.html
+++ b/contact.html
@@ -12,35 +12,32 @@
         <title>Jeremy Kleeman | Contact</title>
     </head>
     <body>
-    <nav class="navbar navbar-expand-md navbar-dark ">
-      <div class="container">
-          <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <div class="container-fluid" style="padding-right:0px;">
-            <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="biography.html">Biography</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="media.html">Media</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="performances.html">Performances</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
-            </li>
-          </ul>
-          </div>
-        </div>
+    <nav class="navbar navbar-expand-md navbar-dark">
+  <div class="container">
+    
+    <!-- BRAND — WHITE + BLUE GLOW + PULSE -->
+    <a class="navbar-brand" href="index.html">
+      <span class="brand-full">Jeremy Kleeman</span>
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="container-fluid" style="padding-right:0;">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="biography.html">Biography</a></li>
+          <li class="nav-item"><a class="nav-link" href="media.html">Media</a></li>
+          <li class="nav-item"><a class="nav-link" href="performances.html">Performances</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </div>
+</nav>
       <br>
         <div class="container sitetext">
             <p class="text mt-4 mb-4">
