--- a/media.html
+++ b/media.html
@@ -28,9 +28,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="container-fluid" style="padding-right:0;">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="biography.html">Biography</a></li>
-          <li class="nav-item"><a class="nav-link" href="media.html">Media</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="media.html">Media</a></li>
           <li class="nav-item"><a class="nav-link" href="performances.html">Performances</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
