--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-        <title>Jeremy Kleeman | Contact</title>
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-md navbar-dark">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jeremy Kleeman | Contact</title>
+
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+  <!-- Your CSS -->
+  <link href="styles.css" rel="stylesheet">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<!-- ==================== NAVBAR ==================== -->
+<nav class="navbar navbar-expand-md navbar-dark">
   <div class="container">
-    
-    <!-- BRAND — WHITE + BLUE GLOW + PULSE -->
     <a class="navbar-brand" href="index.html">
       <span class="brand-full">Jeremy Kleeman</span>
     </a>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="container-fluid" style="padding-right:0;">
         <ul class="navbar-nav ms-auto">
@@ -38,27 +42,54 @@
     </div>
   </div>
 </nav>
-      <br>
-        <div class="container sitetext">
-            <p class="text mt-4 mb-4">
-                <strong>Jeremy</strong> is represented by 
-                <strong>Stephen McAllan</strong> at <strong>Emblem Artists</strong>, please direct enquires to stephen@emblemartists.com.
-            </p>
-            <br>
-          <p>Contact Jeremy here:</p>
-          <form action="https://formspree.io/f/movplpan" method="POST">
-            <div class="mb-3">
-              <input type="text" name="name" class="form-control" placeholder="Name" required>
-            </div>
-            <div class="mb-3">
-              <input type="email" name="_replyto" class="form-control" placeholder="Email Address" required>
-            </div>
-            <div class="mb-3">
-              <textarea name="message" class="form-control" rows="6" placeholder="Your Message" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary" style="float: right;">Send</button>
-          </form>
-        </div>
 
-    </body>
+<!-- ==================== CONTACT HERO ==================== -->
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-8">
+
+      <!-- REPRESENTATION -->
+      <div class="representation-card p-4 p-md-5 mb-5 text-center">
+        <h2 class="representation-title">Representation</h2>
+        <p class="representation-text mb-3">
+          <strong>Jeremy</strong> is proudly represented by<br>
+          <strong class="text-primary">Stephen McAllan</strong> at <strong>Emblem Artists</strong>
+        </p>
+        <p class="representation-email mb-0">
+          <a href="mailto:stephen@emblemartists.com" class="email-link">
+            stephen@emblemartists.com
+          </a>
+        </p>
+      </div>
+
+      <!-- CONTACT FORM -->
+      <div class="contact-card p-4 p-md-5">
+        <h2 class="contact-title text-center mb-4">Get in Touch</h2>
+        <p class="text-center text-muted mb-5">Send a message directly to Jeremy</p>
+
+        <form action="https://formspree.io/f/movplpan" method="POST" class="contact-form">
+          <div class="mb-4">
+            <input type="text" name="name" class="form-control form-control-lg" placeholder="Your Name" required>
+          </div>
+          <div class="mb-4">
+            <input type="email" name="_replyto" class="form-control form-control-lg" placeholder="Your Email" required>
+          </div>
+          <div class="mb-4">
+            <textarea name="message" class="form-control form-control-lg" rows="6" placeholder="Your Message" required></textarea>
+          </div>
+          <div class="text-end">
+            <button type="submit" class="btn btn-primary btn-lg px-5">Send Message</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+</body>
 </html>
