--- a/media.html
+++ b/media.html
@@ -1,53 +1,71 @@
-<!DOCTYPE html>
+<body>
+  <!-- NAVBAR (as is) -->
 
-<html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-        <title>Jeremy Kleeman | Media</title>
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-md navbar-dark">
-  <div class="container">
-    
-    <!-- BRAND — WHITE + BLUE GLOW + PULSE -->
-    <a class="navbar-brand" href="index.html">
-      <span class="brand-full">Jeremy Kleeman</span>
-    </a>
+  <section class="media-hero text-center">
+    <h1 class="display-4 fw-bold">Media</h1>
+    <p class="lead">Highlights, performances, and press</p>
+  </section>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <!-- VIDEO SECTION -->
+  <section class="media-section container py-5">
+    <h2 class="section-title">Featured Videos</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="embed-container shadow-lg rounded">
+          <iframe src="https://www.youtube.com/embed/cX2r6GB7SCw" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="embed-container shadow-lg rounded">
+          <iframe src="https://www.youtube.com/embed/jqiva0gyPyk" allowfullscreen></iframe>
+        </div>
+      </div>
+      <!-- Add more video blocks -->
+    </div>
+  </section>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <div class="container-fluid" style="padding-right:0;">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="biography.html">Biography</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="media.html">Media</a></li>
-          <li class="nav-item"><a class="nav-link" href="performances.html">Performances</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        </ul>
+  <!-- PRODUCTION GALLERY -->
+  <section class="photo-gallery py-5 bg-dark text-light">
+    <div class="container">
+      <h2 class="section-title text-center mb-4">Production Gallery</h2>
+      <div class="row g-3">
+        <div class="col-sm-6 col-md-4">
+          <img src="images/opera1.jpg" class="img-fluid rounded shadow-sm hover-zoom">
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <img src="images/opera2.jpg" class="img-fluid rounded shadow-sm hover-zoom">
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <img src="images/opera3.jpg" class="img-fluid rounded shadow-sm hover-zoom">
+        </div>
+        <!-- More photos -->
       </div>
     </div>
-  </div>
-</nav>
-      <br>
-      <div class="container">
-        <br>
-          <div class='embed-container'>
-            <iframe src='https://www.youtube.com/embed/cX2r6GB7SCw' frameborder='0' allowfullscreen></iframe>
-          </div>
-        <br>
-          <div class='embed-container'>
-            <iframe src='https://www.youtube.com/embed/jqiva0gyPyk' frameborder='0' allowfullscreen></iframe>
+  </section>
+
+  <!-- REVIEWS -->
+  <section class="reviews py-5">
+    <div class="container">
+      <h2 class="section-title text-center mb-4">Critical Acclaim</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card bg-light text-dark shadow-sm h-100">
+            <div class="card-body">
+              <p class="review-text">“Kleeman’s voice exudes warmth and intelligence — a commanding presence.”</p>
+              <p class="review-source fw-bold mb-0">— The Sydney Morning Herald</p>
+            </div>
           </div>
         </div>
-    </body>
-</html>
+        <div class="col-md-4">
+          <div class="card bg-light text-dark shadow-sm h-100">
+            <div class="card-body">
+              <p class="review-text">“A masterclass in subtlety and precision — deeply moving.”</p>
+              <p class="review-source fw-bold mb-0">— Limelight Magazine</p>
+            </div>
+          </div>
+        </div>
+        <!-- More reviews -->
+      </div>
+    </div>
+  </section>
+</body>
